Added Algorithm for ranged attacks,  determine whether shot is blocked entirely (by all tiles that block movement except water) or obstructed by other units, adding a -4 penalty to the shot.

--- a/GridSDL2/GridSDL2.vcxproj
+++ b/GridSDL2/GridSDL2.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="kiss_widgets.c" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="MapAlgorithms.cpp" />
     <ClCompile Include="MeleeAttack.cpp" />
     <ClCompile Include="Objects.cpp" />
     <ClCompile Include="PickupItemsMenu.cpp" />
@@ -88,6 +89,7 @@
     <ClInclude Include="kiss_sdl.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="MapAlgorithms.h" />
     <ClInclude Include="Objects.h" />
     <ClInclude Include="PickupItemsMenu.h" />
     <ClInclude Include="PlayerCharacter.h" />
