Finished general work on program, started code standard refactoring

--- a/GridSDL2/GridSDL2.vcxproj
+++ b/GridSDL2/GridSDL2.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="39_tiling.cpp" />
+    <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="AIPlayer.cpp" />
     <ClCompile Include="Armor.cpp" />
     <ClCompile Include="Button.cpp" />
