--- a/GridSDL2/GridSDL2.vcxproj
+++ b/GridSDL2/GridSDL2.vcxproj
@@ -161,6 +161,13 @@
     <IncludePath>C:\DevelopmentLibraries\SDL2_ttf-devel-2.0.14-VC\SDL2_ttf-2.0.14\include;C:\DevelopmentLibraries\SDL2_image-devel-2.0.2-VC\SDL2_image-2.0.2\include;C:\DevelopmentLibraries\SDL2-devel-2.0.7-VC\SDL2-2.0.7\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\DevelopmentLibraries\SDL2_ttf-devel-2.0.14-VC\SDL2_ttf-2.0.14\lib\x86;C:\DevelopmentLibraries\SDL2_image-devel-2.0.2-VC\SDL2_image-2.0.2\lib\x86;C:\DevelopmentLibraries\SDL2-devel-2.0.7-VC\SDL2-2.0.7\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>C:\DevelopmentLibraries\SDL2-devel-2.0.7-VC\SDL2-2.0.7\include;C:\DevelopmentLibraries\SDL2_ttf-devel-2.0.14-VC\SDL2_ttf-2.0.14\include;C:\DevelopmentLibraries\SDL2_image-devel-2.0.2-VC\SDL2_image-2.0.2\include;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>C:\DevelopmentLibraries\SDL2-devel-2.0.7-VC\SDL2-2.0.7\include;C:\DevelopmentLibraries\SDL2_ttf-devel-2.0.14-VC\SDL2_ttf-2.0.14\include;C:\DevelopmentLibraries\SDL2_image-devel-2.0.2-VC\SDL2_image-2.0.2\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\DevelopmentLibraries\SDL2-devel-2.0.7-VC\SDL2-2.0.7\lib\x86;C:\DevelopmentLibraries\SDL2_ttf-devel-2.0.14-VC\SDL2_ttf-2.0.14\lib\x86;C:\DevelopmentLibraries\SDL2_image-devel-2.0.2-VC\SDL2_image-2.0.2\lib\x86;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -191,10 +198,13 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <SubSystem>Console</SubSystem>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
